tests/integration/snapshots/tests__integration__parser__for_each_wrong_first_arg.snap
---
source: tests/integration/parser.rs
expression: out
---
ParserReturn {
    program: Program {
        span: Span {
            start: 0,
            end: 0,
        },
        source: "for_each(1, q.foo, {v.b = v.a + 1;});",
        is_complex: false,
        body: [],
    },
    errors: [
        Diagnostic {
            inner: DiagnosticInner {
                message: "`for_each` first argument must be either a `variable.` or a `temp.`",
                labels: Some(
                    [
                        LabeledSpan {
                            label: None,
                            span: SourceSpan {
                                offset: SourceOffset(
                                    9,
                                ),
                                length: 1,
                            },
                            primary: false,
                        },
                    ],
                ),
                help: None,
                severity: Error,
            },
        },
    ],
    panicked: true,
}
