tests/integration/snapshots/tests__integration__parser__missing_semi_with_semi.snap
---
source: tests/integration/parser.rs
expression: out
---
ParserReturn {
    program: Program {
        span: Span {
            start: 0,
            end: 4,
        },
        source: "0; 0",
        is_complex: true,
        body: [
            Expression(
                NumericLiteral(
                    NumericLiteral {
                        span: Span {
                            start: 0,
                            end: 1,
                        },
                        value: 0.0,
                        raw: "0",
                    },
                ),
            ),
            Expression(
                NumericLiteral(
                    NumericLiteral {
                        span: Span {
                            start: 3,
                            end: 4,
                        },
                        value: 0.0,
                        raw: "0",
                    },
                ),
            ),
        ],
    },
    errors: [
        Diagnostic {
            inner: DiagnosticInner {
                message: "Semicolons are required for complex Molang expressions (contain `=` or `;`)",
                labels: Some(
                    [
                        LabeledSpan {
                            label: None,
                            span: SourceSpan {
                                offset: SourceOffset(
                                    4,
                                ),
                                length: 0,
                            },
                            primary: false,
                        },
                    ],
                ),
                help: Some(
                    "Try inserting a semicolon here",
                ),
                severity: Error,
            },
        },
    ],
    panicked: false,
}
