tests/integration/snapshots/tests__integration__parser__negate_operation.snap
---
source: tests/integration/parser.rs
expression: out
---
ParserReturn {
    program: Program {
        span: Span {
            start: 0,
            end: 8,
        },
        source: "-(1 + 1)",
        is_complex: false,
        body: [
            Expression(
                Unary(
                    UnaryExpression {
                        span: Span {
                            start: 0,
                            end: 8,
                        },
                        operator: Negate,
                        argument: Parenthesized(
                            Single {
                                span: Span {
                                    start: 1,
                                    end: 8,
                                },
                                expression: Binary(
                                    BinaryExpression {
                                        span: Span {
                                            start: 2,
                                            end: 7,
                                        },
                                        left: NumericLiteral(
                                            NumericLiteral {
                                                span: Span {
                                                    start: 2,
                                                    end: 3,
                                                },
                                                value: 1.0,
                                                raw: "1",
                                            },
                                        ),
                                        operator: Addition,
                                        right: NumericLiteral(
                                            NumericLiteral {
                                                span: Span {
                                                    start: 6,
                                                    end: 7,
                                                },
                                                value: 1.0,
                                                raw: "1",
                                            },
                                        ),
                                    },
                                ),
                            },
                        ),
                    },
                ),
            ),
        ],
    },
    errors: [],
    panicked: false,
}
