tests/integration/snapshots/tests__integration__parser__null_operation.snap
---
source: tests/integration/parser.rs
expression: out
---
ParserReturn {
    program: Program {
        span: Span {
            start: 0,
            end: 10,
        },
        source: "v.a ?? 1.2",
        is_complex: false,
        body: [
            Expression(
                Binary(
                    BinaryExpression {
                        span: Span {
                            start: 0,
                            end: 10,
                        },
                        left: Variable(
                            VariableExpression {
                                span: Span {
                                    start: 0,
                                    end: 3,
                                },
                                lifetime: Variable,
                                member: Property {
                                    span: Span {
                                        start: 0,
                                        end: 3,
                                    },
                                    property: IdentifierReference {
                                        span: Span {
                                            start: 2,
                                            end: 3,
                                        },
                                        name: "a",
                                    },
                                },
                            },
                        ),
                        operator: Coalesce,
                        right: NumericLiteral(
                            NumericLiteral {
                                span: Span {
                                    start: 7,
                                    end: 10,
                                },
                                value: 1.2,
                                raw: "1.2",
                            },
                        ),
                    },
                ),
            ),
        ],
    },
    errors: [],
    panicked: false,
}
