tests/integration/snapshots/tests__integration__parser__parenthesized_binary_operation.snap
---
source: tests/integration/parser.rs
expression: out
---
ParserReturn {
    program: Program {
        span: Span {
            start: 0,
            end: 17,
        },
        source: "(1 + 1) * (1 + 1)",
        is_complex: false,
        body: [
            Expression(
                Binary(
                    BinaryExpression {
                        span: Span {
                            start: 0,
                            end: 17,
                        },
                        left: Parenthesized(
                            Single {
                                span: Span {
                                    start: 0,
                                    end: 7,
                                },
                                expression: Binary(
                                    BinaryExpression {
                                        span: Span {
                                            start: 1,
                                            end: 6,
                                        },
                                        left: NumericLiteral(
                                            NumericLiteral {
                                                span: Span {
                                                    start: 1,
                                                    end: 2,
                                                },
                                                value: 1.0,
                                                raw: "1",
                                            },
                                        ),
                                        operator: Addition,
                                        right: NumericLiteral(
                                            NumericLiteral {
                                                span: Span {
                                                    start: 5,
                                                    end: 6,
                                                },
                                                value: 1.0,
                                                raw: "1",
                                            },
                                        ),
                                    },
                                ),
                            },
                        ),
                        operator: Multiplication,
                        right: Parenthesized(
                            Single {
                                span: Span {
                                    start: 10,
                                    end: 17,
                                },
                                expression: Binary(
                                    BinaryExpression {
                                        span: Span {
                                            start: 11,
                                            end: 16,
                                        },
                                        left: NumericLiteral(
                                            NumericLiteral {
                                                span: Span {
                                                    start: 11,
                                                    end: 12,
                                                },
                                                value: 1.0,
                                                raw: "1",
                                            },
                                        ),
                                        operator: Addition,
                                        right: NumericLiteral(
                                            NumericLiteral {
                                                span: Span {
                                                    start: 15,
                                                    end: 16,
                                                },
                                                value: 1.0,
                                                raw: "1",
                                            },
                                        ),
                                    },
                                ),
                            },
                        ),
                    },
                ),
            ),
        ],
    },
    errors: [],
    panicked: false,
}
